refactor: trilha -> course
