# src/app.js
@@ -2,7 +2,7 @@ const express = require('express');
 const cors = require('cors');
 
 const app = express();
-const trilhasRouter = require('./routes/trilhas');
+const coursesRouter = require('./routes/courses');
 const notionRouter = require('./routes/notions');
 const authRouter = require('./routes/users');
 const healthRouter = require('./routes/health');
@@ -12,7 +12,7 @@ const relatedRouter = require('./routes/relatedContent');
 app.use(express.json());
 app.use(cors());
 
-app.use('/trilhas', trilhasRouter);
+app.use('/courses', coursesRouter);
 app.use('/notions', notionRouter);
 app.use('/auth', authRouter);
 app.use('/related', relatedRouter);
